test/e2e/conformance/tests/ingress-loadbalance-mcp-sse.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-conformance-infra-ingress-loadbalance-mcp-sse-test
  namespace: higress-conformance-infra
  annotations:
    higress.io/load-balance: "mcp-sse"
spec:
  ingressClassName: higress
  rules:
    - host: "mcp-sse.example.com"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: infra-backend-v3
                port:
                  number: 8080
